test/files/neg/xml-doctype.scala
object foo {
  val html =
    <?xml version="1.0"?>
    <!DOCTYPE html>
    <html>
    </html>
}
