test/files/neg/xml-doctype.check
xml-doctype.scala:4: error: in XML literal: '-' expected instead of 'D'
    <!DOCTYPE html>
      ^
xml-doctype.scala:4: error: in XML literal: '-' expected instead of 'O'
    <!DOCTYPE html>
       ^
xml-doctype.scala:7: error: input ended while parsing XML
}
 ^
three errors found
